// Plutoa Database Schema
// Generated based on Django models

Project Plutoa {
  database_type: 'PostgreSQL'
  Note: 'Complex Personal Finance Management System'
}

Table User {
  id integer [pk, increment]
  username varchar [unique, note: 'Required. 30 characters or fewer.']
  email varchar [note: 'Email address']
  first_name varchar
  last_name varchar
  is_active boolean [default: true]
  is_staff boolean [default: false]
  is_superuser boolean [default: false]
  date_joined datetime
  avatar varchar [note: 'Path to avatar image']
  currency_preference varchar [default: 'CZK']
  is_verified boolean [default: true]
}

Table PasswordResetToken {
  id integer [pk, increment]
  user_id integer [ref: > User.id]
  token varchar [unique]
  created_at datetime
  used boolean [default: false]
}

Table FinancialAccount {
  id integer [pk, increment]
  user_id integer [ref: > User.id]
  name varchar
  account_type varchar [note: 'CHECKING, SAVINGS, CASH, CREDIT, INVESTMENT, OTHER']
  initial_balance decimal [default: 0]
  currency varchar [default: 'CZK']
  color varchar
  icon varchar
  is_active boolean [default: true]
  is_default boolean [default: false]
  include_in_total boolean [default: true]
  description text
  created_at datetime
  updated_at datetime
}

Table Category {
  id integer [pk, increment]
  user_id integer [ref: > User.id]
  name varchar
  description text
  icon varchar
  color varchar [default: '#000000']
  category_type varchar [note: 'EXPENSE, INCOME, BOTH']
}

Table Transaction {
  id integer [pk, increment]
  user_id integer [ref: > User.id]
  account_id integer [ref: > FinancialAccount.id, note: 'Source account / Target for income']
  to_account_id integer [ref: > FinancialAccount.id, note: 'Target account for transfers']
  category_id integer [ref: > Category.id]
  amount decimal
  type varchar [note: 'EXPENSE, INCOME, TRANSFER']
  date date
  description text
  created_at datetime
  updated_at datetime
}

Table RecurringTransaction {
  id integer [pk, increment]
  user_id integer [ref: > User.id]
  category_id integer [ref: > Category.id]
  name varchar
  description text
  amount decimal
  type varchar [note: 'INCOME, EXPENSE']
  frequency varchar [note: 'DAILY, WEEKLY, BIWEEKLY, MONTHLY, QUARTERLY, YEARLY']
  start_date date
  end_date date
  next_due_date date
  status varchar [default: 'ACTIVE']
  auto_create boolean [default: false]
  notify_before_days integer [default: 3]
  created_at datetime
  updated_at datetime
}

Table RecurringTransactionHistory {
  id integer [pk, increment]
  recurring_transaction_id integer [ref: > RecurringTransaction.id]
  transaction_id integer [ref: > Transaction.id]
  created_at datetime
  was_auto_created boolean [default: false]
}

Table Budget {
  id integer [pk, increment]
  user_id integer [ref: > User.id]
  category_id integer [ref: > Category.id, note: 'Optional specific category']
  name varchar
  amount decimal
  start_date date
  end_date date
  period varchar [note: 'MONTHLY, YEARLY, CUSTOM']
  is_active boolean [default: true]
  created_at datetime
  updated_at datetime
}

Table BudgetCategory {
  id integer [pk, increment]
  budget_id integer [ref: > Budget.id]
  category_id integer [ref: > Category.id]
  allocated_amount decimal
}

Table FinancialGoal {
  id integer [pk, increment]
  user_id integer [ref: > User.id]
  name varchar
  description text
  goal_type varchar [default: 'SAVINGS']
  target_amount decimal
  current_amount decimal [default: 0]
  target_date date
  status varchar [default: 'ACTIVE']
  icon varchar
  color varchar
  created_at datetime
  updated_at datetime
  completed_at datetime
}

Table GoalContribution {
  id integer [pk, increment]
  goal_id integer [ref: > FinancialGoal.id]
  amount decimal
  date date
  note varchar
  created_at datetime
}

Table Notification {
  id integer [pk, increment]
  user_id integer [ref: > User.id]
  related_budget_id integer [ref: > Budget.id]
  related_goal_id integer [ref: > FinancialGoal.id]
  type varchar [note: 'BUDGET_EXCEEDED, BUDGET_WARNING, RECURRING_DUE, GOAL_ACHIEVED...']
  title varchar
  message text
  is_read boolean [default: false]
  created_at datetime
}